--- a/to_do_lista/index.html
+++ b/to_do_lista/index.html
@@ -128,8 +128,8 @@
   <body>
     <div id="myDIV" class="header">
       <h2 style="margin: 5px">My To Do List</h2>
-      <input type="text" id="myInput" placeholder="Title..." />
-      <span onclick="newElement()" class="addBtn">Add</span>
+      <input type="text" id="myInput" placeholder="Unesi tekst..." />
+      <span onclick="newElement(this)" class="addBtn">Add</span>
     </div>
 
     <ul id="myUL">
